Show dialog for choosing game path, cleanup (#1083)
* show dialog for choosing game path

* cleanup code

* remove logs and refactor

* remove confusing mpq error, make some mpq loads readonly